version/0.20/_sources/api/solver/_autosummary/settings/curves.rst.txt
:orphan:

.. _curves:

curves
======

.. autoclass:: ansys.fluent.core.solver.settings_241.curves.curves
    :show-inheritance:

.. rubric:: Methods

========================================   =======================================

Method                                                                     Summary

========================================   =======================================
:ref:`list_properties <list_properties>`       List properties of selected object.

========================================   =======================================

.. rubric:: Named object type

:ref:`curves_child <curves_child>`


.. rubric:: Included in:

====================================================   ===========================================

Parent                                                                                     Summary

====================================================   ===========================================
:ref:`residual <residual>`                                       Enter the residual monitors menu.

:ref:`report_plots_child <report_plots_child>`                'child_object_type' of report_plots.

:ref:`histogram <histogram>`                                                    'histogram' child.

:ref:`cumulative_plot_child <cumulative_plot_child>`       'child_object_type' of cumulative_plot.

====================================================   ===========================================

