version/0.25/_sources/api/solver/_autosummary/settings/curves.rst.txt
:orphan:

.. _curves:

curves
======

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.curves.curves
    :show-inheritance:

.. rubric:: Methods

========================================   ==========================================

Method                                                                        Summary

========================================   ==========================================
:ref:`list_properties <list_properties>`          List properties of selected object.

:ref:`resize <resize>`                         Set number of objects for list-object.

========================================   ==========================================

.. rubric:: Named object type

:ref:`curves_child <curves_child>`


.. rubric:: Included in:

====================================================   =========================================================================

Parent                                                                                                                   Summary

====================================================   =========================================================================
:ref:`residual <residual>`                                 Options for controlling residual information that the solver reports.

:ref:`report_plots_child <report_plots_child>`                                              'child_object_type' of report_plots.

:ref:`histogram <histogram>`                                    Provides access to create new and edit existing histogram plots.

:ref:`cumulative_plot_child <cumulative_plot_child>`                                     'child_object_type' of cumulative_plot.

:ref:`solution_plot <solution_plot>`                                                                     Plot the solution data.

:ref:`profile_data <profile_data>`                                                                         Display profile data.

:ref:`interpolated_data <interpolated_data>`                                                          Display interpolated data.

====================================================   =========================================================================

